--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ footer {
 .stack {
     margin-right: 0;
     background-repeat: no-repeat;
-    background-image: url(/img/textedit.png);
+    background-image: url(img/textedit.png);
     background-position: right 50px;
 }
 
@@ -114,7 +114,7 @@ footer {
     margin-right: 0px;
     padding: 0px;
     background-repeat: no-repeat;
-    background-image: url(/img/me.jpg);
+    background-image: url(img/me.jpg);
     background-position: right 50px;
 }
 
